[package]
name = "bevy_arcball_camera"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_core_pipeline",
] }

[dev-dependencies]
bevy = { version = "0.16.1", default-features = true }
